# arg-acc

./: .gitleaksignore  SETUP.md  agent.py  requirements.txt  run_dashboard.bat  run_local.bat
.github/workflows/: aracc-ci.yml
api/: index.py
aracc/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
aracc/aracc_etl/: base.py  download.py  flows.py  runner.py  sources.yml
aracc/aracc_etl/entity_resolution/: __init__.py  linker.py  matcher.py  normalize.py
aracc/aracc_etl/pipelines/: declaraciones_juradas.py
aracc/aracc_etl/transforms/: montos.py
aracc/etl/: flows.py  sources.yml
aracc/etl/pipelines/: comprar.py  datos_gob_ar.py  declaraciones_juradas.py
aracc/etl/transforms/: identificadores.py
aracc/queries/: demo-deteccion.cypher  deteccion.cypher
aracc/schema/: init-neo4j.cypher  seed-demo.cypher
aracc/tests/: conftest.py  test_declaraciones_juradas.py  test_entity_resolution.py
aracc/tests/fixtures/ddjj/raw/: declaraciones-juradas-2023-consolidado-al-20240101.csv  declaraciones-juradas-bienes-2023-consolidado-al-20240101.csv  declaraciones-juradas-deudas-2023-consolidado-al-20240101.csv  declaraciones-juradas-grupo-familiar-2023-al-20240101.csv
config/: settings.py
dashboard/: __init__.py  seed_demo.cypher  service.py  terminal.html  web.py
docs/ar-acc/: ARQUITECTURA.md  datasets-ar.md  roadmap.md
docs/ar-acc/legal/: marco-legal-ar.md
frontend/: package-lock.json
pipelines/: import_ddjj_real.py  import_to_neo4j.py
web/: app_streamlit.py
