[project]
name = "aracc-etl"
version = "0.1.0"
description = "ETL pipelines for ar-acc — Argentina Transparency Graph"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
flows = ["prefect>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
aracc-etl = "aracc_etl.runner:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aracc_etl*"]

[tool.setuptools.package-data]
aracc_etl = ["sources.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
